objects/Marketing_KPI_Target__c.object
<CustomObject>
    <description>Object to hold and track history of Marketing KPI Targets.</description>
    <fields>
        <fullName>Closed_Won_Amount_YTD_LDR_NL__c</fullName>
        <description>LDR Sourced and New Logo Closed Won Amount of MCLs YTD as of this record&apos;s date.</description>
        <inlineHelpText>LDR Sourced and New Logo Closed Won Amount of MCLs YTD as of this record&apos;s date.</inlineHelpText>
        <label>Closed Won Amount YTD (LDR/NL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Amount_YTD_MS_NL__c</fullName>
        <description>Marketing Sourced and New Logo Closed Won Amount of MCLs YTD as of this record&apos;s date.</description>
        <inlineHelpText>Marketing Sourced and New Logo Closed Won Amount of MCLs YTD as of this record&apos;s date.</inlineHelpText>
        <label>Closed Won Amount YTD (MS/NL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>DATE(VALUE(MID(RIGHT(  Target_Key__c , 8), 1, 4)), VALUE(MID(RIGHT(  Target_Key__c , 8), 5, 2)), VALUE(MID(RIGHT(  Target_Key__c , 8), 7, 2)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_MCLs_YTD_Digital_Paid__c</fullName>
        <description>Target Number of Paid Digital MCLs YTD as of this record&apos;s date.</description>
        <inlineHelpText>Target Number of Paid Digital MCLs YTD as of this record&apos;s date.</inlineHelpText>
        <label>Number of MCLs YTD (Digital Paid)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_MCLs_YTD_Digital_Unpaid__c</fullName>
        <description>Target Number of Unpaid Digital MCLs YTD as of this record&apos;s date.</description>
        <inlineHelpText>Target Number of Unpaid Digital MCLs YTD as of this record&apos;s date.</inlineHelpText>
        <label>Number of MCLs YTD (Digital Unpaid)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_MCLs_YTD_Digital__c</fullName>
        <description>Target Number of Digital MCLs YTD as of this record&apos;s date.</description>
        <inlineHelpText>Target Number of Digital MCLs YTD as of this record&apos;s date.</inlineHelpText>
        <label>Number of MCLs YTD (Digital)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_MCLs_YTD_Physical__c</fullName>
        <description>Target Number of Physical MCLs YTD as of this record&apos;s date.</description>
        <inlineHelpText>Target Number of Physical MCLs YTD as of this record&apos;s date.</inlineHelpText>
        <label>Number of MCLs YTD (Physical)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_MCLs_YTD__c</fullName>
        <description>Target Number of MCLs YTD as of this record&apos;s date.</description>
        <inlineHelpText>Target Number of MCLs YTD as of this record&apos;s date.</inlineHelpText>
        <label>Number of MCLs YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_MQLs_YTD_Digital_Paid__c</fullName>
        <label>Number of MQLs YTD (Digital Paid)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_MQLs_YTD_Digital_Unpaid__c</fullName>
        <label>Number of MQLs YTD (Digital Unpaid)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_MQLs_YTD_Digital__c</fullName>
        <label>Number of MQLs YTD (Digital)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_MQLs_YTD_Physical__c</fullName>
        <label>Number of MQLs YTD (Physical)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_MQLs_YTD__c</fullName>
        <label>Number of MQLs YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Opps_with_Positive_Amt_MSNL__c</fullName>
        <description>Target Number of Marketing Sourced and New Logo Opportunities with a positive amount, YTD as of this record&apos;s date.</description>
        <inlineHelpText>Target Number of Marketing Sourced and New Logo Opportunities with a positive amount, YTD as of this record&apos;s date.</inlineHelpText>
        <label>Number of Opps with Positive Amt (MS/NL)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pipeline_Amount_YTD_LDR_NL__c</fullName>
        <description>LDR Sourced and New Logo Pipeline Amount of MCLs YTD as of this record&apos;s date.</description>
        <inlineHelpText>LDR Sourced and New Logo Pipeline Amount of MCLs YTD as of this record&apos;s date.</inlineHelpText>
        <label>Pipeline Amount YTD (LDR/NL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pipeline_Amount_YTD_MS_NL__c</fullName>
        <description>Marketing Sourced and New Logo Pipeline Amount of MCLs YTD as of this record&apos;s date.</description>
        <inlineHelpText>Marketing Sourced and New Logo Pipeline Amount of MCLs YTD as of this record&apos;s date.</inlineHelpText>
        <label>Pipeline Amount YTD (MS/NL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Key__c</fullName>
        <description>External ID generated from Target Segmentation Key and relevant date</description>
        <externalId>true</externalId>
        <inlineHelpText>REGION-SUBREGION-SEGMENT-DATE</inlineHelpText>
        <label>Target Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Target_Segment_Key__c</fullName>
        <formula>LEFT( Target_Key__c ,  LEN(Target_Key__c) - 9)</formula>
        <label>Target Segment Key</label>
        <type>Text</type>
    </fields>
    <label>Marketing KPI Target</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Marketing KPI Targets Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing KPI Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>